force-app/main/default/objects/pse__Timecard_Header__c/fields/FlowError__c.field-meta.xml
<CustomField>
    <fullName>FlowError__c</fullName>
    <label>FlowError</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NoTaskTime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>