force-app/main/default/objects/pse__Timecard_Header__c/fields/TestEntry__c.field-meta.xml
<CustomField>
    <fullName>TestEntry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestEntry</label>
    <type>Checkbox</type>
</CustomField>