force-app/main/default/objects/pse__Timecard_Header__c/fields/Update__c.field-meta.xml
<CustomField>
    <fullName>Update__c</fullName>
    <label>Update</label>
    <length>5</length>
    <type>Text</type>
</CustomField>