force-app/main/default/objects/pse__Timecard_Header__c/validationRules/Exclusion_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Exclusion_reason</fullName>
    <active>true</active>
    <errorConditionFormula>pse__Exclude_from_Billing__c == TRUE &amp;&amp;  ISBLANK(pse__Timecard_Notes__c)&amp;&amp; NOT( $Permission.CC_TimeCard_Overpass_VF_Exclude_Description)</errorConditionFormula>
    <errorDisplayField>pse__Exclude_from_Billing__c</errorDisplayField>
    <errorMessage>Por favor Incluye la razón por la que excluyes estas horas de Facturación. (Weekly Notes)</errorMessage>
</ValidationRule>