force-app/main/default/objects/pse__Timecard_Header__c/validationRules/NoTaskTime.validationRule-meta.xml
<ValidationRule>
    <fullName>NoTaskTime</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( FlowError__c ,&quot;NoTaskTime&quot;)</errorConditionFormula>
    <errorMessage>No puede reportar directamente sobre el proyecto</errorMessage>
</ValidationRule>