force-app/main/default/objects/pse__Timecard_Header__c/validationRules/Total_hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_hours</fullName>
    <active>false</active>
    <errorConditionFormula>pse__Total_Hours__c !=  pse__Project_Task_Hours__c</errorConditionFormula>
    <errorMessage>Debe reportar sobre la tarea (No esta permitido reportar sobre el proyecto directamente)</errorMessage>
</ValidationRule>