force-app/main/default/objects/pse__Timecard_Header__c/listViews/BasicQueueAmazon_Timecard_Header.listView-meta.xml
<ListView>
    <fullName>BasicQueueAmazon_Timecard_Header</fullName>
    <filterScope>Queue</filterScope>
    <label>BasicQueueAmazon</label>
    <queue>BasicQueueAmazon</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>