force-app/main/default/objects/pse__Timecard_Header__c/listViews/My_Timecard_not_Submitted.listView-meta.xml
<ListView>
    <fullName>My_Timecard_not_Submitted</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>pse__End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>notEqual</operation>
        <value>Submitted</value>
    </filters>
    <label>My Timecard not Submitted</label>
</ListView>