force-app/main/default/objects/pse__Timecard_Header__c/listViews/Timecard_not_Submitted.listView-meta.xml
<ListView>
    <fullName>Timecard_not_Submitted</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Billable__c</columns>
    <columns>pse__Approved__c</columns>
    <columns>pse__Exclude_from_Billing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>notEqual</operation>
        <value>Submitted</value>
    </filters>
    <label>Timecard not Submitted</label>
    <sharedTo>
        <group>Managers_MK_SF</group>
        <group>PartnersCloudCoachers</group>
    </sharedTo>
</ListView>