force-app/main/default/objects/pse__Timecard_Header__c/listViews/Timecard_not_Submitted_Developer_Team.listView-meta.xml
<ListView>
    <fullName>Timecard_not_Submitted_Developer_Team</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>pse__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>notEqual</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>pse__Resource__c</field>
        <operation>contains</operation>
        <value>Antonio,Juanan,Paco,Oriol,Hernando,Victor,Urdiain,Jaime,kevin</value>
    </filters>
    <label>Timecard not Submitted Developer Team</label>
    <sharedTo>
        <roleAndSubordinates>Equipo_Tecnico</roleAndSubordinates>
    </sharedTo>
</ListView>